test/spec_vectors/simd_i16x8_arith2/fail/module_18.wat
(module (func $i16x8.avgr_u-arg-empty (result v128) (i16x8.avgr_u)))